--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,16 +9,12 @@
   <body>
     <header class="hero">
       <div class="hero__content">
-        <p class="eyebrow">Earned + Owned Intelligence</p>
-        <h1>Optimize your content for both Google and ChatGPT.</h1>
+        <p class="eyebrow">EARNED + OWNED INTELLIGENCE</p>
+        <h1>Level up your content for the new era of search.</h1>
         <p class="subtitle">
-          Search is changing. Earned+Owned AI Mapper measures SEO and GEO performance for any press release or owned content page,
-          highlights the gap, and tells you exactly what to fix.
+          AI Mapper scores how your content performs across Google and AI engines, uncovers the gaps, and gives you step-by-step fixes that boost visibility, authority, and discovery.
+          Trusted by communications, marketing, and content teams who need reliable visibility in AI-driven search.
         </p>
-        <div class="hero__meta">
-          <span>Version 3.0 · November 2025</span>
-          <span>Owner: Lara Tutton</span>
-        </div>
       </div>
     </header>
 
