--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,6 +15,10 @@
           AI Mapper scores how your content performs across Google and AI engines, uncovers the gaps, and gives you step-by-step fixes that boost visibility, authority, and discovery.
           Trusted by communications, marketing, and content teams who need reliable visibility in AI-driven search.
         </p>
+        <div class="hero__cta">
+          <button class="cta hero-cta" data-jump="#Analyze">Run an Analysis</button>
+          <button class="ghost hero-ghost" data-jump="#HowItWorks">See Example Report</button>
+        </div>
       </div>
     </header>
 
