--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,13 +16,12 @@
           Trusted by communications, marketing, and content teams who need reliable visibility in AI-driven search.
         </p>
         <div class="hero__cta">
-          <button class="cta hero-cta" data-jump="#Analyze">Run an Analysis</button>
-          <button class="ghost hero-ghost" data-jump="#HowItWorks">See Example Report</button>
+          <button class="cta hero-cta" type="button" data-jump="#analysis-tool">Run an Analysis</button>
         </div>
       </div>
     </header>
 
-    <main class="layout">
+    <main class="layout" id="analysis-tool">
       <section class="panel input-panel">
         <h2>1. Provide Content</h2>
         <p class="panel__intro">Choose an input method, add the content, and optionally set the content type + industry for benchmarking.</p>
