--- a/frontend/index.html
+++ b/frontend/index.html
@@ -179,6 +179,18 @@
       <p>Earned+Owned AI Mapper · Dual-mode SEO + GEO analysis · MVP v3.0</p>
     </footer>
 
+    <div class="modal" id="subscriptionModal">
+      <div class="modal__dialog">
+        <button class="modal__close" type="button" aria-label="Close" data-close-modal>&times;</button>
+        <p class="modal__eyebrow">Free analysis used</p>
+        <h3>Subscribe to continue running AI Mapper.</h3>
+        <p class="modal__body">
+          You’ve reached the free limit. Unlock unlimited analyses, report exports, and benchmarking by choosing a plan.
+        </p>
+        <a class="cta modal__cta" href="https://example.com/pricing" target="_blank" rel="noreferrer">Choose a plan</a>
+      </div>
+    </div>
+
     <script type="module" src="./src/main.js"></script>
   </body>
 </html>
