--- a/frontend/index.html
+++ b/frontend/index.html
@@ -175,6 +175,11 @@
       </section>
     </main>
 
+    <div class="loading-overlay" id="loadingOverlay" aria-live="polite" aria-hidden="true">
+      <div class="spinner" role="status"></div>
+      <p>Running AI Mapper analysis…</p>
+    </div>
+
     <footer class="site-footer">
       <p>Earned+Owned AI Mapper · Dual-mode SEO + GEO analysis · MVP v3.0</p>
     </footer>
