--- a/frontend/index.html
+++ b/frontend/index.html
@@ -196,6 +196,9 @@
       </div>
     </div>
 
+    <script>
+      window.AI_MAPPER_API_URL = 'https://ai-mapper-backend.vercel.app';
+    </script>
     <script type="module" src="./src/main.js"></script>
   </body>
 </html>
