--- a/frontend/index.html
+++ b/frontend/index.html
@@ -98,6 +98,9 @@
           <button id="analyzeBtn" class="cta">Run AI Mapper Analysis</button>
           <button id="resetBtn" class="ghost">Reset</button>
         </div>
+        <div id="loadingSpinner" class="ai-spinner hidden">
+          <div class="ai-spinner__circle"></div>
+        </div>
         <p class="helper-text small">Average runtime: 3–4 seconds. Backend URL fetch required for production URLs.</p>
       </section>
 
