Add new lightweight performance engine and remove Lighthouse

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -134,6 +134,19 @@
           </article>
         </div>
 
+        <div class="performance-panel" id="performancePanel">
+          <div class="performance-panel__header">
+            <h3>Performance Snapshot</h3>
+            <span class="performance-score" id="performanceScoreValue">-- / 100</span>
+          </div>
+          <p class="panel__intro performance-panel__intro">
+            Lightweight response metrics captured when the backend fetched your URL.
+          </p>
+          <div class="performance-grid" id="performanceGrid">
+            <p class="helper-text small">Run a URL analysis to view live response time, payload size, and request counts.</p>
+          </div>
+        </div>
+
         <div class="pillars" id="pillarBreakdown">
           <!-- Pillar cards injected via JS -->
         </div>
