GEO upgrade + full E2E test (backend + frontend)

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -151,6 +151,16 @@
           </div>
         </article>
 
+        <section class="bing-card" id="bingVerification">
+          <div class="bing-card__header">
+            <h3>Microsoft/Bing Verification</h3>
+            <p class="helper-text small">Checks for msvalidate tags, IndexNow keys, llms.txt, and Bingbot access.</p>
+          </div>
+          <ul class="bing-checks-list" id="bingChecksList">
+            <li class="helper-text small">Run an analysis to view verification status.</li>
+          </ul>
+        </section>
+
         <div class="pillars" id="pillarBreakdown">
           <section class="pillar-group">
             <div class="pillar-group__header">
@@ -162,7 +172,7 @@
           <section class="pillar-group">
             <div class="pillar-group__header">
               <p class="pillar-group__title">GEO Breakdown (Score: <span id="geoBreakdownScore">--</span>)</p>
-              <p class="pillar-group__subtitle">LLM Comprehension + Prompt Alignment + AI Discovery</p>
+              <p class="pillar-group__subtitle">Structured data, clarity, authority, freshness, and safety.</p>
             </div>
             <div class="pillar-grid" id="geoPillars"></div>
           </section>
