Frontend + API Fixes: Dark UI theme, payload fix, API_BASE, status banner, full GEO improvements

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -115,6 +115,7 @@
             <span aria-hidden="true">↗</span>
           </button>
         </div>
+        <div id="statusBanner" class="status-banner hidden" role="status" aria-live="polite"></div>
 
         <div class="scores-grid">
           <article class="score-card" id="seoScoreCard">
